CustomerServiceTest and HyperLightLogisticsApplicationTests fixed, lombok-mapstruct-binding added